src/main/java/com/example/stream/quarkus/registry/model/error/PersonNotFound.java
package com.example.stream.quarkus.registry.model.error;

public record PersonNotFound() implements PersonError {
}
